# ljVarnishPatch

./: .gitignore  Makefile.am  README  autogen.sh
doc/: Makefile.in  changes-1.0.3-1.0.4.xml  changes-1.0.4-1.1.xml  changes-1.1-1.1.1.xml  changes-1.1.1-1.1.2.xml  changes-1.1.2-2.0.xml  changes-1.1.xml  changes-2.0.1.xml  changes-2.0.3-2.0.4.xml  changes-2.0.4-2.0.5.xml  changes-2.0.4.xml  changes-2.0.5-2.0.6.xml  changes-2.0.5.xml  changes-2.0.6.xml  changes-html.xsl  changes.css
etc/: Makefile.am  Makefile.in  default.vcl  zope-plone.vcl
include/: Makefile.am  Makefile.in  cli.h  cli_priv.h  http_headers.h  libvarnish.h  libvcl.h  persistent.h  shmlog.h  varnishapi.h  vcl.h  vcl_returns.h  vpf.h  vre.h  vsb.h  vss.h
include/compat/: setproctitle.h  strlcat.h  strlcpy.h  strndup.h
lee/: noCookies.http  twoCookies.http
lib/libjemalloc/: Makefile.in
lib/libvarnish/: Makefile.am  assert.c  binary_heap.c  flopen.c  svn_version.c  tcp.c  vct.c  vev.c  vlu.c  vpf.c  vsha256.c
lib/libvarnishapi/: Makefile.am  Makefile.in  shmlog.c
lib/libvarnishcompat/: Makefile.in  daemon.c  setproctitle.c  srandomdev.c  strlcpy.c  strndup.c
lib/libvcl/: vcc_acl.c  vcc_action.c  vcc_compile.h  vcc_dir_random.c  vcc_dir_round_robin.c  vcc_parse.c  vcc_priv.h  vcc_string.c  vcc_xref.c
man/: Makefile.in  vcl.7  vcl.7so
redhat/: Makefile.am  Makefile.in  varnish.spec
varnish-cache/: Makefile.in  config.h.in  configure.ac
varnish-cache/doc/: Makefile.am  changes-1.1.1.xml  changes-2.0.3.xml
varnish-cache/include/: binary_heap.h  flopen.h  http_response.h  miniobj.h  (+5 more)
(+14 files in other folders)
